modify websit last

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -10,7 +10,8 @@
   {% if page.subtitle %}
   <meta name="description" content="{{ page.subtitle }}">
   {% endif %}
-
+<!--网站在浏览器标签栏中图标-->
+<link rel="shortcut icon" type="image/x-icon" href="/img/favicon.ico" media="screen" />
   <link rel="alternate" type="application/rss+xml" title="{{ site.title }} {{ site.title-separator }} {{ site.description }}" href="{{ site.baseurl }}/feed.xml" />
 
   {% include gtm_head.html %}
