--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -163,12 +163,14 @@
 		  &nbsp;&bull;&nbsp;
 		  <a href="{{ site.url }}">{{ site.url-pretty }}</a>
 		  {% endif %}
+		  &nbsp;&bull;&nbsp;
+		  Theme by <a href="http://deanattali.com/beautiful-jekyll/">beautiful-jekyll</a>
 	    </p>
-	        <!-- Please don't remove this, keep my open source work credited :) -->
+	        <!-- Please don't remove this, keep my open source work credited :) 
 		<p class="theme-by text-muted">
-		  Theme by
-		  <a href="http://deanattali.com/beautiful-jekyll/">beautiful-jekyll</a>
+		  Theme by <a href="http://deanattali.com/beautiful-jekyll/">beautiful-jekyll</a>
 		</p>
+		-->
       </div>
     </div>
   </div>
