--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -12,6 +12,7 @@ common-js:
   - "/js/jquery-1.11.2.min.js"
   - "/js/bootstrap.min.js"
   - "/js/main.js"
+  - "/js/toc.js"
 ---
 
 <!DOCTYPE html>
@@ -30,6 +31,7 @@ common-js:
     {% include footer.html %}
   
     {% include footer-scripts.html %}
-  
+	
+</script>
   </body>
 </html>
